manifest/cert-manager/go-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-ingress
  namespace: go-app
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - go.thecloudnative.io
    secretName: letsencrypt-prod
  rules:
  - host: go.thecloudnative.io
    http:
      paths:
      - backend:
          serviceName: go-app
          servicePort: 80
