manifest/cert-manager/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - web.thecloudnative.io
    - app.thecloudnative.io
    secretName: letsencrypt-prod
  rules:
  - host: web.thecloudnative.io
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  - host: app.thecloudnative.io
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 80
